tests/snapshots/regression/recovery__bad_match_separator_then_continue.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/bad_match_separator_then_continue.flx
exit_code: 1

[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • tests/fixtures/recovery/bad_match_separator_then_continue.flx
error[E034]: Unexpected Token

Match arms must be separated by `,`, not `;`.

  tests/fixtures/recovery/bad_match_separator_then_continue.flx:1:17
  |
1 | match x { 0 -> 1; 1 -> 2 }
  |                 ^

Note:
  while parsing `match` expression
